updated mysql configurations

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,6 @@ play.filters.disabled+=play.filters.csrf.CSRFFilter
 
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost/example?serverTimezone=UTC"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/slick_test?serverTimezone=UTC"
 slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = ""
+slick.dbs.default.db.password = "root"
