disabled play evolutions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,3 +5,11 @@ slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/slick_test?serverTimezone=UTC"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = "root"
+
+# Evolutions
+# ~~~~~
+# You can disable evolutions if needed
+# play.evolutions.enabled=false
+
+# You can disable evolutions for a specific datasource if necessary
+play.evolutions.db.default.enabled=false
